实现一个让view在容器里面按照圆形排布，然后会自动旋转的容器

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <declare-styleable name="SimpleViewGroup">
+        <attr name="radius" format="dimension" />
+        <attr name="period" format="integer" />
+        <attr name="autoRotate" format="boolean" />
+    </declare-styleable>
+
 </resources>
